--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,23 +1,100 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
-  <body>
+<body>
 
     <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+
+    <div class="container">
+        <header>
+            <nav>
+                <div class="navigation">
+                    <a href="services.html">Services</a>
+                    <a href="#product">Product</a>
+                    <a href="#visions">Vision</a>
+                    <a href="#features">Features</a>
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
+
+                    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+                </div>
+            </nav>
+        </header>
+    </div>
+    <br><br>
+    <section class="innovate-container">
+        <div class="inn">
+            <h1>Innovation<br> On
+                <br> Demand
+            </h1>
+            <button>Get Started</button>
+        </div>
+        <div class="snippet"><img src="img/header-img.png" alt="Image of a code snippet."></div>
+    </section>
+
+    <hr>
+    <section class="middle">
+        <div class="top-middle">
+            <div id="features">
+                <h4>Features</h4>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+            </div>
+
+            <div id="about">
+                <h4>About</h4>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+            </div>
+        </div>
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+        <div class=bottom-middle>
+            <div id="services">
+                <h4>Services</h4>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+            </div>
+
+            <div id="product">
+                <h4>Product</h4>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+            </div>
+
+            <div id="vision">
+                <h4> Vision</h4>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section id="contact">
+        <div>
+            <address>
+Contact<br>
+123 Way 456 Street<br>
+Somewhere, USA<br><br>
+1 (888) 888-8888<br><br>
+sales@greatidea.io
+</address>
+        </div>
+    </section>
+    <div>
+        <p id="copyright">&#169Copyright Great Idea! 2018</p>
+    </div>
+    </div>
+</body>
+
 </html>
