--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -18,9 +18,8 @@
 <body>
 
     <!-- Copy and paste your HTML from the first UI project here -->
-
-    <div class="container">
-        <header>
+    <div class="site-container">
+        <div class="container">
             <nav>
                 <div class="navigation">
                     <a href="services.html">Services</a>
@@ -33,66 +32,66 @@
                     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
                 </div>
             </nav>
-        </header>
-    </div>
-    <br><br>
-    <section class="innovate-container">
-        <div class="inn">
-            <h1>Innovation<br> On
-                <br> Demand
-            </h1>
-            <button>Get Started</button>
         </div>
-        <div class="snippet"><img src="img/header-img.png" alt="Image of a code snippet."></div>
-    </section>
-
-    <hr>
-    <section class="middle">
-        <div class="top-middle">
-            <div id="features">
-                <h4>Features</h4>
-                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <br><br>
+        <section class="innovate-container">
+            <div class="inn">
+                <h1>Innovation<br> On
+                    <br> Demand
+                </h1>
+                <button>Get Started</button>
             </div>
+            <div class="snippet"><img src="img/header-img.png" alt="Image of a code snippet."></div>
+        </section>
 
-            <div id="about">
-                <h4>About</h4>
-                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <hr>
+        <section class="middle">
+            <div class="top-middle">
+                <div id="features">
+                    <h4>Features</h4>
+                    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+                </div>
+
+                <div id="about">
+                    <h4>About</h4>
+                    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+                </div>
             </div>
-        </div>
-        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+            <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-        <div class=bottom-middle>
-            <div id="services">
-                <h4>Services</h4>
-                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+            <div class=bottom-middle>
+                <div id="services">
+                    <h4>Services</h4>
+                    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
+                </div>
+
+                <div id="product">
+                    <h4>Product</h4>
+                    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+                </div>
+
+                <div id="vision">
+                    <h4> Vision</h4>
+                    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+                </div>
             </div>
-
-            <div id="product">
-                <h4>Product</h4>
-                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-            </div>
-
-            <div id="vision">
-                <h4> Vision</h4>
-                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-            </div>
-        </div>
-    </section>
-    <hr>
-    <section id="contact">
-        <div>
-            <address>
+        </section>
+        <hr>
+        <section id="contact">
+            <div>
+                <address>
 Contact<br>
 123 Way 456 Street<br>
 Somewhere, USA<br><br>
 1 (888) 888-8888<br><br>
 sales@greatidea.io
 </address>
+            </div>
+        </section>
+        <div>
+            <div class="copyright">&#169Copyright Great Idea! 2018</div>
         </div>
-    </section>
-    <div>
-        <p id="copyright">&#169Copyright Great Idea! 2018</p>
     </div>
     </div>
 </body>
