--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,85 +16,115 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            Services Product Vision Features About Contact
+    <div class="site-container">
+        <div class="container">
 
-            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        </nav>
-    </header>
+            <nav>
+                <div class="navigation">
+                    <a href="services.html">Services</a>
+                    <a href="#product">Product</a>
+                    <a href="#visions">Vision</a>
+                    <a href="#features">Features</a>
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
 
-    <section>
-        <div><img class="services-header-img" src="img/services-header.jpg" alt="Our services header image"></div>
+                    <a href=index.html> <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+                    </a>
+                </div>
+            </nav>
+
+        </div>
+        <div class="first-Content">
+
+            <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+
+            <div class="service">
+                <h1>Services</h1>
+            </div>
+
+            <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat.
+                Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+            </p>
+        </div>
+        <hr>
+        <section class="second-content">
+            <div class="p1">
+                <h3>Digital Design</h3>
+
+                <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+                    pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
 
-        Services
+                <button type="button><a href=" Learn More ">Learn More</a></button>
+             </div>
 
-        <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
-        </p>
-    </section>
-    <section>
-        <div>Digital Design
+
+        <div class="p1 ">
+            <h3>UX / UI
+            </h3>
 
             <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
                 eleifend. Mauris euismod facilisis iaculis.</p>
 
-
-            <div>Learn More</div>
-        </div>
-
-
-        <div>UX / UI
-
-            <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                eleifend. Mauris euismod facilisis iaculis.</p>
-
-            <div>Learn More</div>
-        </div>
+                <button type="button><a href=" Learn More ">Learn More</a></button>
+            </div>
 
 
-        <div>Digital Marketing
+            <div class="p1">
+                <h3>Digital Marketing</h3>
 
-            <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                eleifend. Mauris euismod facilisis iaculis.</p>
+                <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+                    pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
-            <div>Learn More</div>
-        </div>
+                <button type="button><a href=" Learn More ">Learn More</a></button>
+                </div>
 
-
-        <div>Web Development
+        <div class="p1 ">
+            <h3>Web Development</h3>
 
             <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
                 eleifend. Mauris euismod facilisis iaculis.</p>
 
-            <div>Learn More</div>
+                <button type="button><a href=" Learn More ">Learn More</a></button>
+            </div>
+
+
+            <div class="p1">
+                <h3>iOS Development</h3>
+
+                <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+                    pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+                <button type="button><a href=" Learn More ">Learn More</a></button>
         </div>
 
 
-        <div>iOS Development
+        <div class="p1 ">
+            <h3>Android Development</h3>
 
             <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
                 eleifend. Mauris euismod facilisis iaculis.</p>
 
-            <div>Learn More</div>
+                <button type="button><a href=" Learn More ">Learn More</a></button>
+            </div>
+        </section>
+        <hr>
+        <div class="third-content ">
+            <div class="p2">
+                <h3>Some Facts About Our Services</h3>
+                <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+                    pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+                <ui>
+                    <li> Awesome thing </li>
+                    <li>Amazing thing </li>
+                    <li>Cool thing </li>
+                    <li> Great thing</li>
+                </ui>
+            </div>
+            <img class="services-info-img " src="img/services-info.png " alt="one of our employees hard at work ">
         </div>
-
-
-        <div>Android Development
-
-            <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                eleifend. Mauris euismod facilisis iaculis.</p>
-
-            <div>Learn More</div>
-        </div>
-    </section>
-    <section>
-        Some Facts About Our Services Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis. Awesome thing Amazing thing Cool thing Great thing
-
-        <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work"> Copyright Great Idea! 2018
-    </section>
+        <div class="copyright "> &#169Copyright Great Idea! 2018</div>
+    </div>
 </body>
 
 </html>
